# delivery-system

./: README.md
综合1/: CMakeLists.txt
综合1/file/: delivery.json  user.json
综合1/include/: data.h
综合1/include/UI/: cli.h
综合1/include/backend/: deliverymanager.h  usermanager.h
综合1/include/common/: deliverymanager.h  usermanager.h
综合1/include/misc/: delivery.h  duser.h  manager.h  user.h
综合1/src/: main.cpp
综合1/src/UI/: cli.cpp  delivery.cpp  list.cpp  print.cpp  user.cpp
综合1/src/backend/: deliverymanager.cpp  usermanager.cpp
综合1/src/misc/: delivery.cpp  duser.cpp  manager.cpp  user.cpp
综合2/: CMakeLists.txt  CMakeSettings.json
综合2/file/: delivery.json  user.json
综合2/include/: data.h
综合2/include/backend/: usermanager.h
综合2/include/common/: deliverymanager.h  usermanager.h
综合2/include/misc/: cuser.h  delivery.h  deliverybook.h  duser.h  manager.h  user.h
综合2/src/: main.cpp
综合2/src/UI/: cli.cpp  delivery.cpp  list.cpp  print.cpp  user.cpp
综合2/src/backend/: deliverymanager.cpp  usermanager.cpp
综合2/src/misc/: cuser.cpp  deliverynormal.cpp  user.cpp
综合3/: CMakeLists.txt
综合3/file/: delivery.json  user.json
综合3/include/: data.h
综合3/include/UI/: cli.h  handler.h  server.h
综合3/include/backend/: deliverymanager.h  usermanager.h
综合3/include/client/: deliverymanager.h  httpclient.h  usermanager.h
综合3/include/misc/: deliveryfragile.h  deliverynormal.h
综合3/src/: main.cpp
综合3/src/UI/: cli.cpp  delivery.cpp  handler.cpp  server.cpp  utils.cpp
综合3/src/backend/: usermanager.cpp
综合3/src/client/: deliverymanager.cpp  httpclient.cpp  usermanager.cpp
综合3/src/misc/: delivery.cpp  deliverybook.cpp  deliveryfragile.cpp  duser.cpp  http.cpp  manager.cpp
